[metadata]
name = nineties
version = 0.0.6
description = Ease the reading of relics from the Nineties.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sthagen/python-nineties
author = Stefan Hagen
author_email = stefan@hagen.link

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options.entry_points]
console_scripts =
    nineties = nineties.cli:main

[options]
python_requires = >=3.6.13
install_requires =
    faker>=13.15.0
packages = find:

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = test
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 12
inline-quotes = '
multiline-quotes = """
ignore = E203, W503

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py

[isort]
line_length=120
known_first_party=nineties
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
strict = True
